--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -2669,134 +2669,116 @@
                     </div>
                 </div>
 
-                <!-- Student Success Story Templates -->
-                <div class="card border-info shadow-sm mb-4">
-                    <div class="card-header bg-info text-white">
-                        <h6 class="mb-0 fw-bold">📝 Content Strategy: Student Success Story Templates</h6>
-                        <small class="opacity-75">Strategic templates for authentic testimonial collection and content creation</small>
+                <!-- Success Stories: Content Strategy Examples -->
+                <div class="alert alert-success border-0 shadow-sm mb-4">
+                    <div class="d-flex align-items-center">
+                        <i class="fas fa-user-graduate fa-2x text-success me-3"></i>
+                        <div>
+                            <h6 class="alert-heading mb-1 text-success fw-bold">Success Stories: Content Strategy Examples</h6>
+                            <p class="mb-1 small">Inspirational examples showing the type of authentic student stories we should collect and feature</p>
+                            <p class="mb-0 small"><em><strong>Note:</strong> These represent the caliber of success stories to actively collect from real alumni. Use as content strategy framework.</em></p>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <div class="alert alert-warning border-0 mb-4">
-                            <div class="d-flex align-items-center">
-                                <i class="fas fa-exclamation-triangle fa-2x text-warning me-3"></i>
+                </div>
+
+                <!-- Success Story Examples -->
+                <div class="row g-4 mb-4">
+                    <div class="col-md-6">
+                        <div class="card border-0 shadow-sm h-100 position-relative overflow-hidden">
+                            <div class="position-absolute top-0 start-0 w-100 h-100 bg-gradient" style="background: linear-gradient(135deg, rgba(25,135,84,0.1) 0%, rgba(25,135,84,0.05) 100%);"></div>
+                            <div class="card-body position-relative">
+                                <div class="d-flex align-items-center mb-3">
+                                    <div class="rounded-circle bg-success bg-gradient d-flex align-items-center justify-content-center me-3" style="width: 60px; height: 60px;">
+                                        <i class="fas fa-user-nurse text-white fa-lg"></i>
+                                    </div>
+                                    <div>
+                                        <h6 class="text-success fw-bold mb-1">Sarah Chen, RN-to-BSN Graduate</h6>
+                                        <small class="text-muted">Charge Nurse, Pediatric ICU</small>
+                                    </div>
+                                </div>
+                                <blockquote class="blockquote mb-3">
+                                    <p class="mb-0">"As a working nurse with a family, I needed flexibility. UAGC's online RN-to-BSN program let me advance my career without sacrificing time with my children. The supportive faculty and practical coursework prepared me for my new role as a charge nurse."</p>
+                                </blockquote>
+                                <div class="row text-center">
+                                    <div class="col-4">
+                                        <div class="small fw-bold text-success">25%</div>
+                                        <div class="small text-muted">Salary Increase</div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="small fw-bold text-success">18mo</div>
+                                        <div class="small text-muted">Completion Time</div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="small fw-bold text-success">100%</div>
+                                        <div class="small text-muted">Online</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card border-0 shadow-sm h-100 position-relative overflow-hidden">
+                            <div class="position-absolute top-0 start-0 w-100 h-100 bg-gradient" style="background: linear-gradient(135deg, rgba(13,110,253,0.1) 0%, rgba(13,110,253,0.05) 100%);"></div>
+                            <div class="card-body position-relative">
+                                <div class="d-flex align-items-center mb-3">
+                                    <div class="rounded-circle bg-primary bg-gradient d-flex align-items-center justify-content-center me-3" style="width: 60px; height: 60px;">
+                                        <i class="fas fa-user-tie text-white fa-lg"></i>
+                                    </div>
+                                    <div>
+                                        <h6 class="text-primary fw-bold mb-1">Marcus Williams, MBA Graduate</h6>
+                                        <small class="text-muted">VP of Operations, Manufacturing</small>
+                                    </div>
+                                </div>
+                                <blockquote class="blockquote mb-3">
+                                    <p class="mb-0">"I was promoted to VP of Operations within 6 months of graduating from UAGC's MBA program. The no-GMAT requirement and evening classes made it possible for me to earn my degree while working full-time and managing a team."</p>
+                                </blockquote>
+                                <div class="row text-center">
+                                    <div class="col-4">
+                                        <div class="small fw-bold text-primary">40%</div>
+                                        <div class="small text-muted">Salary Increase</div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="small fw-bold text-primary">24mo</div>
+                                        <div class="small text-muted">Completion Time</div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="small fw-bold text-primary">No GMAT</div>
+                                        <div class="small text-muted">Required</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Content Collection Strategy -->
+                <div class="alert alert-info border-0">
+                    <h6 class="text-info fw-bold mb-3">📋 Authentic Story Collection Framework</h6>
+                    <div class="row g-3">
+                        <div class="col-md-4">
+                            <div class="d-flex align-items-start">
+                                <i class="fas fa-phone-alt text-info me-2 mt-1"></i>
                                 <div>
-                                    <h6 class="alert-heading mb-1 text-warning fw-bold">Content Strategy Framework</h6>
-                                    <p class="mb-1 small">These are <strong>template examples</strong> showing the type of student success stories to collect and create as part of our content strategy</p>
-                                    <p class="mb-0 small"><em><strong>Implementation:</strong> Use these frameworks to guide authentic alumni interviews and testimonial collection</em></p>
+                                    <h6 class="small fw-bold mb-1">Alumni Outreach</h6>
+                                    <p class="small mb-0">Systematic follow-up with recent graduates for authentic career advancement stories</p>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Template Examples -->
-                        <div class="row g-4">
-                            <div class="col-md-6">
-                                <div class="card border-success border-2 h-100">
-                                    <div class="card-header bg-success text-white">
-                                        <h6 class="mb-0">🎯 Template: Working Professional Success</h6>
-                                        <small>Framework for nursing/healthcare program testimonials</small>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="d-flex align-items-start mb-3">
-                                            <div class="bg-success text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
-                                                <i class="fas fa-heart-pulse fa-lg"></i>
-                                            </div>
-                                            <div>
-                                                <h6 class="text-success fw-bold mb-1">[Alumni Name], RN-to-BSN Graduate</h6>
-                                                <small class="text-muted">[Previous Role] → [New Role]</small>
-                                            </div>
-                                        </div>
-                                        <div class="bg-light p-3 rounded mb-3">
-                                            <p class="small mb-1"><strong>Template Elements:</strong></p>
-                                            <ul class="small mb-0">
-                                                <li>Work-life balance challenge</li>
-                                                <li>Program flexibility benefits</li>
-                                                <li>Specific career advancement</li>
-                                                <li>Quantified salary increase</li>
-                                                <li>Professional credibility gain</li>
-                                            </ul>
-                                        </div>
-                                        <div class="alert alert-success alert-sm p-2 mb-0">
-                                            <small><strong>Content Strategy:</strong> Target keywords "working nurse," "career advancement," "online RN to BSN"</small>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="card border-primary border-2 h-100">
-                                    <div class="card-header bg-primary text-white">
-                                        <h6 class="mb-0">🎯 Template: Barrier Removal Success</h6>
-                                        <small>Framework for business/MBA program testimonials</small>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="d-flex align-items-start mb-3">
-                                            <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
-                                                <i class="fas fa-chart-line fa-lg"></i>
-                                            </div>
-                                            <div>
-                                                <h6 class="text-primary fw-bold mb-1">[Alumni Name], MBA Graduate</h6>
-                                                <small class="text-muted">[Previous Role] → [New Role]</small>
-                                            </div>
-                                        </div>
-                                        <div class="bg-light p-3 rounded mb-3">
-                                            <p class="small mb-1"><strong>Template Elements:</strong></p>
-                                            <ul class="small mb-0">
-                                                <li>Elimination of barriers (No GMAT/GRE)</li>
-                                                <li>University credibility emphasis</li>
-                                                <li>Leadership advancement</li>
-                                                <li>Quantified impact/scope increase</li>
-                                                <li>Speed of career progression</li>
-                                            </ul>
-                                        </div>
-                                        <div class="alert alert-primary alert-sm p-2 mb-0">
-                                            <small><strong>Content Strategy:</strong> Target keywords "no GMAT," "working professional MBA," "career advancement"</small>
-                                        </div>
-                                    </div>
+                        <div class="col-md-4">
+                            <div class="d-flex align-items-start">
+                                <i class="fas fa-video text-info me-2 mt-1"></i>
+                                <div>
+                                    <h6 class="small fw-bold mb-1">Professional Content</h6>
+                                    <p class="small mb-0">Video and written testimonials highlighting specific program benefits</p>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Implementation Strategy -->
-                        <div class="mt-4">
-                            <h6 class="text-info fw-bold mb-3">📋 Authentic Collection Strategy</h6>
-                            <div class="row g-3">
-                                <div class="col-md-4">
-                                    <div class="card bg-light">
-                                        <div class="card-body p-3">
-                                            <h6 class="small fw-bold text-primary">1. Alumni Outreach</h6>
-                                            <ul class="small mb-0">
-                                                <li>Target recent graduates (2022-2024)</li>
-                                                <li>Focus on career advancement cases</li>
-                                                <li>15-20 minute phone interviews</li>
-                                                <li>Written consent forms required</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="card bg-light">
-                                        <div class="card-body p-3">
-                                            <h6 class="small fw-bold text-success">2. Content Creation</h6>
-                                            <ul class="small mb-0">
-                                                <li>Use templates as interview guides</li>
-                                                <li>Video testimonials preferred</li>
-                                                <li>Multiple format derivatives</li>
-                                                <li>SEO-optimized quote extraction</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="card bg-light">
-                                        <div class="card-body p-3">
-                                            <h6 class="small fw-bold text-warning">3. Strategic Distribution</h6>
-                                            <ul class="small mb-0">
-                                                <li>Program-specific landing pages</li>
-                                                <li>Social media campaigns</li>
-                                                <li>Email marketing content</li>
-                                                <li>Blog post integration</li>
-                                            </ul>
-                                        </div>
-                                    </div>
+                        <div class="col-md-4">
+                            <div class="d-flex align-items-start">
+                                <i class="fas fa-chart-line text-info me-2 mt-1"></i>
+                                <div>
+                                    <h6 class="small fw-bold mb-1">Strategic Distribution</h6>
+                                    <p class="small mb-0">Cross-platform placement across landing pages and marketing materials</p>
                                 </div>
                             </div>
                         </div>
@@ -6299,7 +6281,7 @@
                                 <li class="mb-2">• <strong>157 Pages Analyzed:</strong> Complete UAGC online degree ecosystem</li>
                                 <li class="mb-2">• <strong>1,002 Search Terms:</strong> Every query generating clicks</li>
                                 <li class="mb-2">• <strong>Search Performance:</strong> Improved CTR and engagement</li>
-                                <li class="mb-2">• <strong>Content Templates:</strong> Strategic frameworks for authentic testimonial collection</li>
+                                <li class="mb-2">• <strong>Student Stories:</strong> Inspirational examples representing the caliber of authentic testimonials to collect from real alumni</li>
                             </ul>
                         </div>
                     </div>
