--- a/seo-cro-audit-uagc.html
+++ b/seo-cro-audit-uagc.html
@@ -1356,67 +1356,152 @@
                         </p>
                     </div>
 
-                    <!-- Concise Crisis & Solution Overview -->
-                    <div class="crisis-solution-cards row mb-4">
-                        <div class="col-lg-6 mb-3">
-                            <div class="card border-danger border-2">
-                                <div class="card-body text-center p-4">
-                                    <h6 class="text-danger fw-bold mb-2">Current Crisis</h6>
-                                    <div class="display-6 fw-bold text-danger">0.056%</div>
-                                    <small class="text-muted">CTR • 2,150 monthly clicks</small>
-                                    <div class="mt-2">
-                                        <span class="badge bg-danger">15-25 lost enrollments/month</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 mb-3">
-                            <div class="card border-success border-2">
-                                <div class="card-body text-center p-4">
-                                    <h6 class="text-success fw-bold mb-2">Recovery Target</h6>
-                                    <div class="display-6 fw-bold text-success">1.5-2%</div>
-                                    <small class="text-muted">CTR • 15K-25K monthly clicks</small>
-                                    <div class="mt-2">
-                                        <span class="badge bg-success">8-20 additional enrollments/month</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Strategic Framework Overview -->
+                    <!-- Executive Summary -->
                     <div class="row mb-4">
                         <div class="col-12">
-                            <div class="card border-0 bg-light">
-                                <div class="card-body p-4">
-                                    <div class="text-center mb-3">
-                                        <h5 class="text-primary fw-bold mb-2">2026 Strategic Framework</h5>
-                                        <p class="text-muted mb-0">Authority building + format diversification + brand humanization</p>
+                            <div class="card border-primary border-3 shadow-lg">
+                                <div class="card-header bg-primary text-white">
+                                    <div class="row align-items-center">
+                                        <div class="col-auto">
+                                            <i class="fas fa-chart-line fa-2x"></i>
+                                        </div>
+                                        <div class="col">
+                                            <h5 class="mb-1 fw-bold">📊 Executive Summary</h5>
+                                            <small class="opacity-75">Critical findings and immediate action plan for UAGC's digital recovery</small>
+                                        </div>
                                     </div>
-                                    
-                                    <div class="row g-3 text-center">
+                                </div>
+                                <div class="card-body p-4">
+                                    <!-- The Problem -->
+                                    <div class="alert alert-danger border-0 mb-4">
+                                        <div class="row align-items-center">
+                                            <div class="col-auto">
+                                                <i class="fas fa-exclamation-triangle fa-2x text-danger"></i>
+                                            </div>
+                                            <div class="col">
+                                                <h6 class="text-danger fw-bold mb-2">🚨 The Crisis: Massive Visibility, Minimal Conversion</h6>
+                                                <p class="mb-2"><strong>45.7M annual impressions</strong> generate only <strong>25.8K clicks (0.056% CTR)</strong> - a conversion crisis costing UAGC an estimated <strong>15-25 potential enrollments monthly</strong>.</p>
+                                                <div class="row g-3">
+                                                    <div class="col-md-6">
+                                                        <div class="small">
+                                                            <strong>Business Programs Emergency:</strong><br>
+                                                            4.32M impressions → 473 clicks (0.01% CTR)
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <div class="small">
+                                                            <strong>Masters Programs Stuck:</strong><br>
+                                                            Page 2 rankings (position 11.61) → 0.11% CTR
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- The Opportunity -->
+                                    <div class="alert alert-success border-0 mb-4">
+                                        <div class="row align-items-center">
+                                            <div class="col-auto">
+                                                <i class="fas fa-trophy fa-2x text-success"></i>
+                                            </div>
+                                            <div class="col">
+                                                <h6 class="text-success fw-bold mb-2">🏆 Proven Success Models Already Exist</h6>
+                                                <p class="mb-2">UAGC has <strong>proven programs achieving 6-25% CTR</strong> - demonstrating the university can deliver exceptional performance when messaging aligns with audience needs.</p>
+                                                <div class="row g-3">
+                                                    <div class="col-md-4">
+                                                        <div class="small">
+                                                            <strong>Nursing:</strong> 24.75% CTR<br>
+                                                            <span class="text-muted">Working professionals focus</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        <div class="small">
+                                                            <strong>MBA:</strong> 14.72% CTR<br>
+                                                            <span class="text-muted">No GMAT, career outcomes</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        <div class="small">
+                                                            <strong>Org Management:</strong> 14.89% CTR<br>
+                                                            <span class="text-muted">Leadership advancement</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- The Solution -->
+                                    <div class="alert alert-info border-0 mb-4">
+                                        <div class="row align-items-center">
+                                            <div class="col-auto">
+                                                <i class="fas fa-rocket fa-2x text-info"></i>
+                                            </div>
+                                            <div class="col">
+                                                <h6 class="text-info fw-bold mb-2">🎯 90-Day Recovery Strategy</h6>
+                                                <p class="mb-2">Scale proven success models across failing programs using the <strong>"working professionals + barrier removal + career outcomes"</strong> formula that already works.</p>
+                                                <div class="row g-3">
+                                                    <div class="col-md-4">
+                                                        <div class="small">
+                                                            <strong>Days 1-30:</strong> Crisis fixes<br>
+                                                            <span class="text-muted">Hero messaging, above-fold outcomes</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        <div class="small">
+                                                            <strong>Days 31-60:</strong> Success scaling<br>
+                                                            <span class="text-muted">Apply nursing model across programs</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        <div class="small">
+                                                            <strong>Days 61-90:</strong> Optimization<br>
+                                                            <span class="text-muted">Content strategy & brand building</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Business Impact -->
+                                    <div class="row g-4">
                                         <div class="col-md-3">
-                                            <div class="metric-item">
-                                                <div class="h5 fw-bold text-primary mb-1">15K-25K</div>
-                                                <small class="text-muted">Monthly Click Recovery</small>
+                                            <div class="text-center p-3 bg-light rounded">
+                                                <div class="h3 fw-bold text-success mb-1">1.5-2%</div>
+                                                <small class="text-muted">Target CTR</small>
                                             </div>
                                         </div>
                                         <div class="col-md-3">
-                                            <div class="metric-item">
-                                                <div class="h5 fw-bold text-success mb-1">1.5-2% CTR</div>
-                                                <small class="text-muted">Target Performance</small>
+                                            <div class="text-center p-3 bg-light rounded">
+                                                <div class="h3 fw-bold text-primary mb-1">15K-25K</div>
+                                                <small class="text-muted">Monthly Clicks</small>
                                             </div>
                                         </div>
                                         <div class="col-md-3">
-                                            <div class="metric-item">
-                                                <div class="h5 fw-bold text-warning mb-1">8-20</div>
-                                                <small class="text-muted">Additional Enrollments</small>
+                                            <div class="text-center p-3 bg-light rounded">
+                                                <div class="h3 fw-bold text-warning mb-1">8-20</div>
+                                                <small class="text-muted">Additional Enrollments/Month</small>
                                             </div>
                                         </div>
                                         <div class="col-md-3">
-                                            <div class="metric-item">
-                                                <div class="h5 fw-bold text-info mb-1">12 Months</div>
-                                                <small class="text-muted">Implementation Timeline</small>
+                                            <div class="text-center p-3 bg-light rounded">
+                                                <div class="h3 fw-bold text-info mb-1">90 Days</div>
+                                                <small class="text-muted">Implementation</small>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Bottom Line -->
+                                    <div class="alert alert-warning border-0 mt-4 mb-0">
+                                        <div class="row align-items-center">
+                                            <div class="col-auto">
+                                                <i class="fas fa-dollar-sign fa-2x text-warning"></i>
+                                            </div>
+                                            <div class="col">
+                                                <h6 class="text-warning fw-bold mb-1">💰 Bottom Line Impact</h6>
+                                                <p class="mb-0">Implementing proven messaging formulas across failing programs could generate <strong>8-20 additional enrollments monthly</strong> within 90 days, transforming UAGC's digital visibility into meaningful enrollment recovery.</p>
                                             </div>
                                         </div>
                                     </div>
